--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@angular/cli": "~7.3.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@schematics/angular": "^7.3.1",
     "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
