--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ngx-spinner": "^7.2.0",
     "ngx-toastr": "^10.1.0",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.17",
     "rxjs": "~6.3.3",
     "sweetalert2": "^10.15.1",
     "ts-md5": "^1.2.7",
