--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.16",
+    "@angular/cdk": "~7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -30,6 +32,7 @@
     "datatables.net-dt": "^1.10.23",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.5",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "jsesc": "^3.0.2",
     "jszip": "^3.7.1",
@@ -43,8 +46,8 @@
     "ngx-toastr": "^10.1.0",
     "node-sass": "^4.14.1",
     "npm": "^6.14.17",
-    "rxjs": "~6.3.3",
-    "sweetalert2": "^10.15.1",
+    "rxjs": "^6.3.3",
+    "sweetalert2": "^10.16.9",
     "ts-md5": "^1.2.7",
     "tslib": "^1.9.0",
     "xlsx": "^0.16.9",
