--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss",
               "src/assets/plugins/fontawesome-free/css/all.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/assets/dist/css/adminlte.min.css",
               "src/assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
               "src/assets/plugins/daterangepicker/daterangepicker.css",
@@ -48,7 +49,8 @@
               "node_modules/datatables.net-buttons/js/buttons.colVis.js",
               "node_modules/datatables.net-buttons/js/buttons.flash.js",
               "node_modules/datatables.net-buttons/js/buttons.html5.js",
-              "node_modules/datatables.net-buttons/js/buttons.print.js"
+              "node_modules/datatables.net-buttons/js/buttons.print.js",
+              "node_modules/@fortawesome/fontawesome-free/js/all.js"
             ],
             "es5BrowserSupport": true
           },
