--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "@types/datatables.net": "^1.10.19",
     "@types/jquery": "^3.5.5",
     "angular-confirmation-popover": "^6.0.0",
